--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,18 +1,34 @@
 [
   {
+    "title": "SharePlate",
+    "imageSrc": "projects/white.png",
+    "description": "A personal portfolio website to showcase my work and skills.",
+    "skills": ["Android", "Kotlin", "Firebase"],
+    "demo": "https://youtu.be/H8OfTlhMFOI?si=Oa2BSRsfnxclAFzK",
+    "source": "https://github.com/vijayasai220/SharePlate"
+  },
+  {
+    "title": "MedLeaf App",
+    "imageSrc": "projects/image1.png",
+    "description": "Android app for real-time Medicinal Plant Identification",
+    "skills": ["Android","Kotlin","Deep Learning"],
+    "demo": "https://youtu.be/R9KiX09NpNo?si=UX9ybB8MspfducmO"
+  },
+  {
     "title": "Portfolio Website",
     "imageSrc": "projects/project.png",
     "description": "A personal portfolio website to showcase my work and skills.",
     "skills": ["React", "CSS", "Node.js"],
-    "demo": "https://demo.com",
+    "demo": "https://github.com/vijayasai220/vijayportfolio",
     "source": "https://github.com/vijayasai220/vijayportfolio"
   },
   {
     "title": "IQRush Quiz App",
-    "imageSrc": "projects/project.png",
+    "imageSrc": "projects/image2.png",
     "description": "Android app for quizzes and learning.",
     "skills": ["Android","React Native","Javascript"],
-    "demo": "https://demo.com",
+    "demo": "https://github.com/vijayasai220/IQRush",
     "source": "https://github.com/vijayasai220/IQRush"
   }
+  
 ] 
